# snowdrift

./: .travis.yml  README.md  cabal.project  cabal.project.freeze  snowdrift.cabal
app/: Main.hs
deploy/: BuildDockerfile
deploy/snowdrift-control-runit-service/log/: run
deploy/snowdrift-runit-service/: docker-compose.yml
devops/: DatabaseDockerfile  DeployDockerfile  README.md  build-ghc-8.2.2-docker-image.sh  deploy-snowdrift-control.sh  pg_hba.conf
devops/snowdrift-control-runit-service/: run
devops/snowdrift-runit-service/: run
devops/snowdrift-runit-service/log/: run
scripts/: build-ghc-8.2.2-docker-image.sh  build-snowdrift-docker-image.sh  build-snowdrift-in-docker-container.sh  deploy-snowdrift-control.sh  push-ghc-8.2.2-docker-image.sh  push-snowdrift-docker-image.sh
snowdrift/: snowdrift.cabal
snowdrift-control/: Main.hs  README.md  snowdrift-control.cabal
snowdrift/app/: Main.hs
snowdrift/src/: Http.hs  SnowdriftPrelude.hs  Version.hs
src/: SnowdriftPrelude.hs
