cabal-version: 2.2

name: snowdrift
version: 0.1.0
license: BSD-3-Clause
license-file: LICENSE
author: Mitchell Rosen
maintainer: mitchellwrosen@gmail.com
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
      base >= 4.10 && < 4.11
  default-language: Haskell2010

executable snowdrift
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      base >= 4.10 && < 4.11
    , snowdrift
  default-language: Haskell2010
