cabal-version: 2.2

name: snowdrift
version: 0.1.0
description: A reimplementation of the Snowdrift crowdfunding platform
synopsis: Snowdrift crowdfunding platform
category: Web
build-type: Simple
license: BSD-3-Clause
license-file: LICENSE
author: Mitchell Rosen
maintainer: mitchellwrosen@gmail.com
tested-with: GHC == 8.2.2

library
  hs-source-dirs: src
  build-depends:
      base >= 4.10 && < 4.11
  exposed-modules:
    Lib
  default-language: Haskell2010

executable snowdrift
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      base >= 4.10 && < 4.11
    , http-types >= 0.12 && < 0.13
    , snowdrift
    , wai >= 3.2 && < 3.3
    , warp >= 3.2 && < 3.3
  default-language: Haskell2010
