cabal-version: 2.2

name: snowdrift
version: 1
category: Web
build-type: Simple
description: A reimplementation of the Snowdrift crowdfunding platform
synopsis: Snowdrift crowdfunding platform
author: Mitchell Rosen
maintainer: mitchellwrosen@gmail.com
homepage: https://github.com/mitchellwrosen/snowdrift
bug-reports: https://github.com/mitchellwrosen/snowdrift/issues
copyright: Copyright (c) 2018 Mitchell Rosen
license: BSD-3-Clause
license-file: LICENSE
tested-with: GHC == 8.2.2

source-repository head
  type: git
  location: https://github.com/mitchellwrosen/snowdrift.git

library
  hs-source-dirs: src
  build-depends:
      base >= 4.10 && < 4.11
    , bytestring >= 0.10 && < 0.11
    , template-haskell >= 2.12 && < 2.13
    , text >= 1.2 && < 1.3
    , th-lift-instances >= 0.1 && < 0.2
    , unordered-containers >= 0.2 && < 0.3
  exposed-modules:
    SnowdriftPrelude
    Version
  default-extensions:
    LambdaCase
    OverloadedStrings
  default-language: Haskell2010

executable snowdrift
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      base >= 4.10 && < 4.11
    , bytestring >= 0.10 && < 0.11
    , http-api-data >= 0.3 && < 0.4
    , http-types >= 0.12 && < 0.13
    , snowdrift
    , text >= 1.2 && < 1.3
    , unordered-containers >= 0.2 && < 0.3
    , wai >= 3.2 && < 3.3
    , warp >= 3.2 && < 3.3
  default-extensions:
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    ViewPatterns
  default-language: Haskell2010
