cabal-version: 2.2

name: snowdrift-control
version: 1
category: Web
build-type: Simple
description: The Snowdrift control server
synopsis: Snowdrift control server
author: Mitchell Rosen
maintainer: mitchellwrosen@gmail.com
homepage: https://github.com/mitchellwrosen/snowdrift
bug-reports: https://github.com/mitchellwrosen/snowdrift/issues
copyright: Copyright (c) 2018 Mitchell Rosen
license: BSD-3-Clause
license-file: LICENSE
tested-with: GHC == 8.2.2

source-repository head
  type: git
  location: https://github.com/mitchellwrosen/snowdrift.git

executable snowdrift-control
  hs-source-dirs: .
  main-is: Main.hs
  ghc-options: -O -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson ^>= 1.3
    , base ^>= 4.10
    , bytestring ^>= 0.10
    , http-types ^>= 0.12
    , wai ^>= 3.2
    , warp ^>= 3.2
