cabal-version: 2.2

name: snowdrift
version: 1
category: Web
build-type: Simple
description: A reimplementation of the Snowdrift crowdfunding platform
synopsis: Snowdrift crowdfunding platform
author: Mitchell Rosen
maintainer: mitchellwrosen@gmail.com
homepage: https://github.com/mitchellwrosen/snowdrift
bug-reports: https://github.com/mitchellwrosen/snowdrift/issues
copyright: Copyright (c) 2018 Mitchell Rosen
license: BSD-3-Clause
license-file: LICENSE
tested-with: GHC == 8.2.2

source-repository head
  type: git
  location: https://github.com/mitchellwrosen/snowdrift.git

common deps
  ghc-options: -Wall
  build-depends:
    , base ^>= 4.10
    , bytestring ^>= 0.10
    , text ^>= 1.2
    , wai ^>= 3.2
  default-extensions:
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    ViewPatterns
  default-language: Haskell2010

library
  import: deps
  hs-source-dirs: src
  build-depends:
    , aeson ^>= 1.3
    , template-haskell ^>= 2.12
    , th-lift-instances ^>= 0.1
  exposed-modules:
    Http
    SnowdriftPrelude
    Version

executable snowdrift
  import: deps
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -O -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , http-types ^>= 0.12
    , snowdrift
    , warp ^>= 3.2
